unpackaged/main/default/objects/EventApi__Sponsor__c/EventApi__Sponsor__c.object-meta.xml
<CustomObject>
    <description>Sponsors track the organizations who have purchased a &quot;Sponsorship Package&quot; for a Event.</description>
    <label>Sponsor</label>
    <nameField>
        <label>Sponsor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>