unpackaged/main/default/objects/EventApi__Sponsor__c/fields/EventApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Override ** Link to related Contact. Derives from the Account &quot;Primary Contact&quot; field if no value defined.</description>
    <inlineHelpText>** System Calculated Override ** Link to related Contact. Derives from the Account &quot;Primary Contact&quot; field if no value defined.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SYSTEM</relationshipLabel>
    <relationshipName>Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>