unpackaged/main/default/objects/EventApi__Sponsor__c/fields/EventApi__Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>