unpackaged/main/default/objects/EventApi__Sponsor__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the sponsored event.</description>
    <inlineHelpText>Link to the sponsored event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Sponsors</relationshipLabel>
    <relationshipName>Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>