unpackaged/main/default/objects/EventApi__Sponsor__c/fields/EventApi__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Image_URL__c</fullName>
    <description>Secure (&quot;https://&quot;) location of an image or logo that will display the sponsor&quot;s name. Image should be at least 250px in the smallest dimension and the file size should not exceed 250 KB.</description>
    <inlineHelpText>Secure (&quot;https://&quot;) location of an image or logo that will display the sponsor&quot;s name. Image should be at least 250px in the smallest dimension and the file size should not exceed 250 KB.</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>