unpackaged/main/default/objects/EventApi__Sponsor__c/fields/EventApi__Sponsor_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sponsor_Hyperlink__c</fullName>
    <description>The value in this field will allow front end users to click on the sponsor image to navigate to the URL.</description>
    <inlineHelpText>The value in this field will allow front end users to click on the sponsor image to navigate to the URL.</inlineHelpText>
    <label>Sponsor Hyperlink</label>
    <type>Url</type>
</CustomField>