unpackaged/main/default/objects/EventApi__Sponsor__c/fields/EventApi__Sponsor_Package__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Sponsor_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the purchased sponsor package.</description>
    <inlineHelpText>Link to the purchased sponsor package.</inlineHelpText>
    <label>Sponsor Package</label>
    <referenceTo>EventApi__Sponsor_Package__c</referenceTo>
    <relationshipLabel>Sponsors</relationshipLabel>
    <relationshipName>Sponsors</relationshipName>
    <type>Lookup</type>
</CustomField>