unpackaged/main/default/objects/EventApi__Sponsor__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Account__c</columns>
    <columns>EventApi__Contact__c</columns>
    <columns>EventApi__Sponsor_Package__c</columns>
    <columns>EventApi__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>